Few bug corrections in HelpMeSettings